# wolframresolver

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/solve/: route.ts
