[package]
name = "faang-wolfram-solver-backend"
version = "0.1.0"
edition = "2021"
description = "Instantly solve any math problem - Backend API"
authors = ["JJ-Dynamite"]
license = "MIT"
repository = "https://github.com/JJ-Dynamite/faang-wolfram-solver"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
